fix: a11y contrast

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,59 +1,110 @@
 body {
-    font-family: "Roboto", sans-serif !important;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  ul,
-  .markdown-body table td,
-  .markdown-body table th {
-    font-family: "Roboto", sans-serif !important;
-  }
-  
-  h1 {
-    font-weight: 900 !important;
-  }
-  
-  h2 {
-    font-weight: 700 !important;
-    color: #555;
-    padding-top: 20px;
-  }
-  
-  a {
-    font-weight: bold;
-  }
-  
-  details {
-    margin-top: 30px;
-    margin-left: 15px;
-  }
-  
-  summary {
-    font-weight: bold;
-    margin-bottom: 8px;
-  }
-  
-  .hover {
-    cursor: pointer;
-  }
-  
-  .margin-left-15 {
-    margin-left: 15px;
-  }
-  
-  .margin-left-25 {
-    margin-left: 25px;
-  }
-  
-  .faq-indent {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  
-  .dark-link {color: #ccc !important}
+  font-family: "Roboto", sans-serif !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+.markdown-body table td,
+.markdown-body table th {
+  font-family: "Roboto", sans-serif !important;
+}
+
+h1 {
+  font-weight: 900 !important;
+}
+
+h2 {
+  font-weight: 700 !important;
+  color: #555;
+  padding-top: 20px;
+}
+
+a {
+  font-weight: 900;
+}
+
+details {
+  margin-top: 30px;
+  margin-left: 15px;
+}
+
+summary {
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.hover {
+  cursor: pointer;
+}
+
+.margin-left-15 {
+  margin-left: 15px;
+}
+
+.margin-left-25 {
+  margin-left: 25px;
+}
+
+.faq-indent {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.dark-link {
+  color: #ccc !important;
+}
+
+th {
+  color: #000 !important;
+}
+
+.aria-hidden {
+  display: none;
+}
+
+.screenreader-text {
+  position: absolute;
+  /* left: -999px;
+  width: 1px;
+  height: 1px;
+  top: auto; */
+  display: none;
+}
+.screenreader-text:focus {
+  color: black;
+  display: inline-block;
+  height: auto;
+  width: auto;
+  position: static;
+  margin: auto;
+}
+
+.skiplink {
+  position: absolute;
+  top: 5px;
+  border: 0 none;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 1px;
+}
+.skiplink:focus {
+  clip: auto;
+  height: auto;
+  position: 0px;
+  z-index: 100000;
+  width: auto;
+  background: #eee;
+}
+
+*:focus {
+  border: 3px solid #000 !important;
+}
